--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<div class="container">
 				<div class="header__top-row">
 					<a href="#" class="">
-						<img src="/img/logo.svg" alt="Loft House">
+						<img src="./img/logo.svg" alt="Loft House">
 					</a>
 					<div class="header__nav">
 						<nav class="nav">
@@ -46,7 +46,7 @@
 			<h1 class="header__title">
 				Жилой комплекс <br>в историческом центре
 				<a href="#benefits">
-					<img class="header__title-icon" src="/img/header/mouse.svg" alt="Scroll next">
+					<img class="header__title-icon" src="./img/header/mouse.svg" alt="Scroll next">
 				</a>
 			</h1>
 		</div>
@@ -69,19 +69,19 @@
 				<h2 class="visually-hidden">Преимущества жилого комплекса</h2>
 				<div class="benefits__row">
 					<div class="benefits__item">
-						<img src="/img/benefits/bench.svg" alt="Bench" class="benefits__item-img">
+						<img src="./img/benefits/bench.svg" alt="Bench" class="benefits__item-img">
 						<p class="benefits__item-text">Рядом&nbsp;исторические <br>парки&nbsp;и&nbsp;скверы</p>
 					</div>
 					<div class="benefits__item">
-						<img src="/img/benefits/building.svg" alt="Building" class="benefits__item-img">
+						<img src="./img/benefits/building.svg" alt="Building" class="benefits__item-img">
 						<p class="benefits__item-text">Полностью <br>обустроенный</p>
 					</div>
 					<div class="benefits__item">
-						<img src="/img/benefits/fountain.svg" alt="Fountain" class="benefits__item-img">
+						<img src="./img/benefits/fountain.svg" alt="Fountain" class="benefits__item-img">
 						<p class="benefits__item-text">10 фонтанов <br>на&nbsp;территории</p>
 					</div>
 					<div class="benefits__item">
-						<img src="/img/benefits/bicycle.svg" alt="Bicycle" class="benefits__item-img">
+						<img src="./img/benefits/bicycle.svg" alt="Bicycle" class="benefits__item-img">
 						<p class="benefits__item-text">6 км <br>велодорожек</p>
 					</div>
 				</div>
@@ -95,19 +95,19 @@
 				</div>
 				<div class="apartments__cards">
 					<a href="#" class="card">
-						<img class="card__img" src="/img/apartments/01.jpg" alt="Пентхаус “Loft Олимп”">
+						<img class="card__img" src="./img/apartments/01.jpg" alt="Пентхаус “Loft Олимп”">
 						<h3 class="card__title">Пентхаус “Loft Олимп”</h3>
 					</a>
 					<a href="#" class="card">
-						<img class="card__img" src="/img/apartments/02.jpg" alt="Апартаменты “Nice Loft”">
+						<img class="card__img" src="./img/apartments/02.jpg" alt="Апартаменты “Nice Loft”">
 						<h3 class="card__title">Апартаменты “Nice Loft”</h3>
 					</a>
 					<a href="#" class="card">
-						<img class="card__img" src="/img/apartments/03.jpg" alt="Апартаменты “Loft Studio”">
+						<img class="card__img" src="./img/apartments/03.jpg" alt="Апартаменты “Loft Studio”">
 						<h3 class="card__title">Апартаменты “Loft Studio”</h3>
 					</a>
 					<a href="#" class="card">
-						<img class="card__img" src="/img/apartments/04.jpg" alt="Loft квартира “Престиж”">
+						<img class="card__img" src="./img/apartments/04.jpg" alt="Loft квартира “Престиж”">
 						<h3 class="card__title">Loft квартира “Престиж”</h3>
 					</a>
 				</div>
@@ -148,8 +148,8 @@
 					Видео про ЖК Loft House
 				</h2>
 				<a href="https://www.youtube.com/watch?v=bhJNL9JUsnY" data-youtubeLightbox class="video__link">
-					<img src="/img/video/play.svg" alt="" class="video__icon">
-					<img src="/img/video/video-img.jpg" alt="" class="video__img">
+					<img src="./img/video/play.svg" alt="" class="video__icon">
+					<img src="./img/video/video-img.jpg" alt="" class="video__img">
 				</a>
 			</div>
 		</section>
@@ -186,7 +186,7 @@
 			<div class="footer__row">
 				<div class="footer__logo">
 					<a href="#" class="">
-						<img src="/img/logo.svg" alt="Loft House">
+						<img src="./img/logo.svg" alt="Loft House">
 					</a>
 				</div>
 				<div class="footer__nav-wrapper">
@@ -219,10 +219,10 @@
 						<li>E-mail: <a class="link-bold" href="mailto:vip@lofthouse.ru">vip@lofthouse.ru</a></li>
 					</ul>
 					<ul class="footer__address-socials">
-						<li><a href="#"><img src="/img/socials/youtube.svg" alt="Youtube"></a></li>
-						<li><a href="#"><img src="/img/socials/vk.svg" alt="VK"></a></li>
-						<li><a href="#"><img src="/img/socials/facebook.svg" alt="Facebook"></a></li>
-						<li><a href="#"><img src="/img/socials/instagram.svg" alt="Instagram"></a></li>
+						<li><a href="#"><img src="./img/socials/youtube.svg" alt="Youtube"></a></li>
+						<li><a href="#"><img src="./img/socials/vk.svg" alt="VK"></a></li>
+						<li><a href="#"><img src="./img/socials/facebook.svg" alt="Facebook"></a></li>
+						<li><a href="#"><img src="./img/socials/instagram.svg" alt="Instagram"></a></li>
 					</ul>
 				</div>
 			</div>
